Fix index access and variable usage in Utilitaire.java